# atboards

./: .gitignore  Dockerfile  Dockerfile.telnet  README.md  docker-compose.yml  justfile  main.py  pyproject.toml
.github/workflows/: docker.yml  pypi.yml
cli/: __main__.py
core/: constellation.py  filters.py  lexicon.py  limits.py  models.py  records.py  resolver.py  shared.py  slingshot.py  util.py
core/auth/: config.py  oauth.py  session.py
data/: shared.json
lexicons/: xyz.atboards.board.json  xyz.atboards.news.json  xyz.atboards.pin.json  xyz.atboards.reply.json  xyz.atboards.site.json  xyz.atboards.thread.json
opengraph/: README.md  index.ts  package-lock.json  package.json  wrangler.toml
react/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
react/public/: client-metadata.json  manifest.json
react/src/: index.css  loaders.ts  main.tsx  routes.tsx
react/src/components/: BBSOutlet.tsx  ErrorPage.tsx  Layout.tsx
react/src/hooks/: useThreadReplies.ts
react/src/lib/: atproto.ts  (+7 more)
telnet/: server.py
tui/: __main__.py  app.py  app.tcss  fetchers.py  local_server.py  util.py
tui/screens/: activity.py  board.py  compose.py  home.py  login.py  news.py  site.py  sysop.py  thread.py
tui/widgets/: breadcrumb.py  handle_input.py  post.py
web/: app.py  cli.py  docker-entrypoint.sh  helpers.py  index.html  lex.config.js  nginx.conf  package-lock.json  package.json  routes.py  routes_auth.py  routes_sysop.py  routes_write.py  tsconfig.tsbuildinfo  vite.config.ts
web/public/: _headers  manifest.json
web/src/: index.css  main.tsx  vite-env.d.ts
web/static/: input.css  style.css
web/templates/: account.html  base.html  board.html  error.html  home.html  login.html  site.html  sysop_create.html  sysop_edit.html  sysop_moderate.html  thread.html
(+150 files in other folders)
