[project]
name = "atbbs"
version = "0.7.0"
description = "Decentralized bulletin boards on atproto."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "rich-click>=1.9.7",
    "textual>=8.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
atbbs = "cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "tui"]

[dependency-groups]
dev = []
