[project]
name = "atbbs"
version = "1.3.0"
description = "Decentralized bulletin boards on atproto."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "authlib>=1.6.9",
    "httpx>=0.28.1",
    "platformdirs>=4.0.0",
    "rich-click>=1.9.7",
    "textual>=8.2.2",
    "piexif>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
atbbs = "cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "telnet", "tui"]

[tool.hatch.build.targets.wheel.force-include]
"data/shared.json" = "core/_shared.json"

[dependency-groups]
dev = []
